--- a/ibm_keras_tf.ipynb
+++ b/ibm_keras_tf.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating a Neural Network that classifies employees by job satisfaction (Tensorflow/Keras) [IBM dataset]"
+    "### Create a Neural Network that classifies employees by job satisfaction (Tensorflow/Keras) [IBM dataset]"
    ]
   },
   {
